<resources>
    <string name="app_name">Basit Döviz Çevirici</string>
    <string name="from">döviz miktarı girin</string>
    <string name="typeAValue">Bir değer girin</string>
    <string name="PickACurrencyToConvert">Lütfen dönüştürmek için bir para birimi seçin</string>
    <string name="to">Dövizin karşılığı</string>
    <string name="paraBirimleri">Para Birimleri</string>
    <string name="ParaBirimleri">Bu Para Birimleri Ne Anlama Geliyor?</string>
    <string name="eur_euro">EUR - Euro</string>
    <string name="usd_amerikan_dolar">USD - Amerikan Doları</string>
    <string name="gbp_sterlin">GBP - Sterlin (Pound)</string>
    <string name="try_turkish_lira">TRY - Türk Lirası</string>
    <string name="jpy_japon_yeni">JPY - Japon Yeni</string>
    <string name="chf_isvicre_frangi">CHF - İsviçre Frangı</string>
    <string name="cny_cin_yuani">CNY - Çin Yuanı</string>
    <string name="dkk_danimarka_kronu">DKK - Danimarka Kronu</string>
    <string name="aud_avustralya_dolari">AUD - Avustralya Doları</string>
    <string name="cad_kanada_dolari">CAD - Kanada Doları</string>
    <string name="sek_isvec_kronu">SEK - İsveç Kronu</string>
    <string name="nok_norvec_kronu">NOK - Norveç Kronu</string>
    <string name="rub_rus_rublesi">RUB - Rus Rublesi</string>
    <string name="hkd_hong_kong_dolar">HKD - Hong Kong Doları</string>
    <string name="idr_endonezya_rupisi">IDR - Endonezya Rupisi</string>
    <string name="ils_israil_yeni_sekeli">ILS - İsrail Yeni Şekeli</string>
    <string name="inr_hindistan_rupisi">INR - Hindistan Rupisi</string>
    <string name="mxn_meksika_pezosu">MXN - Meksika Pezosu</string>
    <string name="czk_cek_korunasi">CZK - Çek Korunası</string>
    <string name="sgd_singapur_dolari">SGD - Singapur Doları</string>
    <string name="thb_tayland_bahti">THB - Tayland Bahtı</string>
    <string name="hrk_hirvat_kunasi">HRK - Hırvat Kunası</string>
    <string name="myr_malezya_ringiti">MYR - Malezya Ringiti</string>
    <string name="bgn_bulgar_levasi">BGN - Bulgar Levası</string>
    <string name="php_filipinler_pezosu">PHP - Filipinler Pezosu</string>
    <string name="pln_polonya_zlotisi">PLN - Polonya Zlotisi</string>
    <string name="zar_guney_afrika_randi">ZAR - Güney Afrika Randı</string>
    <string name="isk_izlanda_kronu">ISK - İzlanda Kronu</string>
    <string name="brl_brazilya_reali">BRL - Brezilya Reali</string>
    <string name="ron_romen_leyi">RON - Romen Leyi</string>
    <string name="nzd_yeni_zelanda_dolari">NZD - Yeni Zelanda Doları</string>
    <string name="krw_guney_kore_wonu">KRW - Güney Kore Wonu</string>
    <string name="huf_macar_forinti">HUF - Macar Forinti</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="resultCalculation">Dönüştürmek istediğiniz miktarın ikinci para biriminde karşılığıdır.</string>
    <string name="hesapMakinesi">Hesap Makinesi</string>
    <string name="hesapMakinesi_esittir">=</string>
    <string name="hesapMakinesi_0">0</string>
    <string name="hesapMakinesi_kusurat">.</string>
    <string name="hesapMakinesi_toplama">+</string>
    <string name="hesapMakinesi_3">3</string>
    <string name="hesapMakinesi_2">2</string>
    <string name="hesapMakinesi_1">1</string>
    <string name="hesapMakinesi_cikarma">-</string>
    <string name="hesapMakinesi_6">6</string>
    <string name="hesapMakinesi_5">5</string>
    <string name="hesapMakinesi_4">4</string>
    <string name="hesapMakinesi_carpma">*</string>
    <string name="hesapMakinesi_9">9</string>
    <string name="hesapMakinesi_8">8</string>
    <string name="hesapMakinesi_7">7</string>
    <string name="hesapMakinesi_bolme">/</string>
    <string name="hesapMakinesi_kapaParantez">)</string>
    <string name="hesapMakinesi_acParantez">(</string>
    <string name="hesapMakinesi_temizle">CE</string>
    <string name="CurrencyDetail">Dönüştürmek istediğiniz para birimine tıklayın</string>
    <string name="targetCurrencyDetails">İstediğiniz başka bir para birimi mi? Aşağıdan diğer hedef para birimini seçebilirsiniz.</string>
    <string name="firstCurrencyDetails">Ana para birimini seçin ve dönüştürmek istediğiniz tutarı girin.</string>

    <string-array name="currencies">
        <item>EUR</item>

        <item>USD</item>
        <item>TRY</item>
        <item>GBP</item>
        <item>RUB</item>
        <item>DKK</item>

        <item>SEK</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>JPY</item>
        <item>HKD</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>CHF</item>
        <item>MXN</item>
        <item>CZK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>HRK</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>CNY</item>
        <item>BGN</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>ZAR</item>
        <item>ISK</item>
        <item>BRL</item>
        <item>RON</item>
        <item>NZD</item>
        <item>KRW</item>
        <item>HUF</item>

    </string-array>

    <string-array name="currencies2">
        <item>USD</item>

        <item>EUR</item>
        <item>TRY</item>
        <item>GBP</item>
        <item>RUB</item>
        <item>DKK</item>

        <item>SEK</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>JPY</item>
        <item>HKD</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>CHF</item>
        <item>MXN</item>
        <item>CZK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>HRK</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>CNY</item>
        <item>BGN</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>ZAR</item>
        <item>ISK</item>
        <item>BRL</item>
        <item>RON</item>
        <item>NZD</item>
        <item>KRW</item>
        <item>HUF</item>

    </string-array>
</resources>