<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/sonuc"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:ellipsize="end"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temizle"
                style="@style/ActionButtonStyle"
                android:text="@string/hesapMakinesi_temizle" />

            <TextView
                android:id="@+id/parantezAc"
                style="@style/ActionButtonStyle"
                android:text="@string/hesapMakinesi_acParantez" />

            <TextView
                android:id="@+id/parantezKapat"
                style="@style/ActionButtonStyle"
                android:text="@string/hesapMakinesi_kapaParantez" />

            <TextView
                android:id="@+id/bolme"
                style="@style/ActionButtonStyle"
                android:text="@string/hesapMakinesi_bolme" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yedi"
                style="@style/NumberButtonStyle"
                android:text="@string/hesapMakinesi_7" />

            <TextView
                android:id="@+id/sekiz"
                style="@style/NumberButtonStyle"
                android:text="@string/hesapMakinesi_8" />

            <TextView
                android:id="@+id/dokuz"
                style="@style/NumberButtonStyle"
                android:text="@string/hesapMakinesi_9" />

            <TextView
                android:id="@+id/carpma"
                style="@style/ActionButtonStyle"
                android:text="@string/hesapMakinesi_carpma" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/dort"
                style="@style/NumberButtonStyle"
                android:text="@string/hesapMakinesi_4" />

            <TextView
                android:id="@+id/bes"
                style="@style/NumberButtonStyle"
                android:text="@string/hesapMakinesi_5" />

            <TextView
                android:id="@+id/alti"
                style="@style/NumberButtonStyle"
                android:text="@string/hesapMakinesi_6" />

            <TextView
                android:id="@+id/cikarma"
                style="@style/ActionButtonStyle"
                android:text="@string/hesapMakinesi_cikarma" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/bir"
                style="@style/NumberButtonStyle"
                android:text="@string/hesapMakinesi_1" />

            <TextView
                android:id="@+id/iki"
                style="@style/NumberButtonStyle"
                android:text="@string/hesapMakinesi_2" />

            <TextView
                android:id="@+id/uc"
                style="@style/NumberButtonStyle"
                android:text="@string/hesapMakinesi_3" />

            <TextView
                android:id="@+id/toplama"
                style="@style/ActionButtonStyle"
                android:text="@string/hesapMakinesi_toplama" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/kusurat"
                style="@style/NumberButtonStyle"
                android:text="@string/hesapMakinesi_kusurat" />

            <TextView
                android:id="@+id/sifir"
                style="@style/NumberButtonStyle"
                android:text="@string/hesapMakinesi_0" />

            <ImageView
                android:id="@+id/sil"
                style="@style/NumberButtonStyle"
                android:scaleType="center"
                android:src="@drawable/ic_backspace" />

            <TextView
                android:id="@+id/esittir"
                style="@style/ActionButtonStyle"
                android:text="@string/hesapMakinesi_esittir" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
